Add kernel config option for lidpatch
Will make it easier in case we need to deactivate it,
as I'm not sure if the 4.2 branch is ready for it yet?

+ add the sysfs entries
usefull to know if the kernel has implemented it or not & runtime.

Change-Id: I083560703c953e3251fe58f348b392f43ea717dd

--- a/drivers/input/keyboard/Kconfig
+++ b/drivers/input/keyboard/Kconfig
@@ -193,6 +193,14 @@ config KEYBOARD_GPIO_POLLED
 	  To compile this driver as a module, choose M here: the
 	  module will be called gpio_keys_polled.
 
+config KEYBOARD_GPIO_LIDPATCH
+        bool "GPIO LidPatch"
+        depends on GENERIC_GPIO
+	default y
+        help 
+		saying yes will activate the aosp like lidpatch logic 
+		saying no will keep it compatible with the original ASUS rom logic
+
 config KEYBOARD_INTERRUPT
 	tristate "Interrupt Buttons"
 	default n
