--- a/arch/arm/configs/tf101_eos_defconfig
+++ b/arch/arm/configs/tf101_eos_defconfig
@@ -2057,7 +2057,8 @@ CONFIG_SND_SOC_WM8903=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
-# CONFIG_HIDRAW is not set
+CONFIG_HIDRAW=y
+CONFIG_UHID=y
 
 #
 # USB Input Devices
